--- a/frontend/login.html
+++ b/frontend/login.html
@@ -36,8 +36,10 @@
 
           const data = await response.json();
           document.getElementById("loginMessage").textContent = data.message;
+          await new Promise(r => setTimeout(r, 500));
           if (data.token) {
             localStorage.setItem("token", data.token);
+            window.open('index.html', '_blank');
           }
         });
     </script>
